<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.vsitekviz.EditActivity" >
    
    <EditText
        android:id="@+id/editQuestionE"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/editQuestion"
        android:inputType="text" >

        <requestFocus />
    </EditText>

    <EditText
        android:id="@+id/editAnswer1E"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10" 
        android:hint="@string/editAnswer1"
        android:inputType="text" />

    <EditText
        android:id="@+id/editAnswer2E"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/editAnswer2"
        android:inputType="text" />

    <EditText
        android:id="@+id/editAnswer3E"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/editAnswer3"
        android:inputType="text" />

    <EditText
        android:id="@+id/editAnswer4E"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/editAnswer4"
        android:inputType="text" />

    <EditText
        android:id="@+id/editCorrectAnswerE"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/editCorrectAnswer"
        android:inputType="text" />

</LinearLayout>
