<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/blackboard"
    android:gravity="center_horizontal"
    tools:context="com.vsitekviz.QuizActivity" >

    <TextView
        android:id="@+id/textAnswer3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textAnswer2"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="5dp"
        android:paddingLeft="30dp"
        android:paddingRight="30dp"
        android:background="@drawable/border"
        android:onClick="onClick"
        android:text="@string/editAnswer3"
        android:textColor="#FFFFFF"
        android:textSize="35sp" />

    <TextView
        android:id="@+id/textQuestion"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/textAnswer1"
        android:layout_centerHorizontal="true"
        android:paddingBottom="15dp"
        android:paddingLeft="30dp"
        android:paddingRight="30dp"
        android:text="@string/editQuestion"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:textColor="#FFFFFF"
        android:textSize="35sp" />

    <TextView
        android:id="@+id/textAnswer1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:layout_marginTop="5dp"
        android:paddingLeft="30dp"
        android:paddingRight="30dp"
        android:background="@drawable/border"
        android:onClick="onClick"
        android:text="@string/editAnswer1"
        android:textColor="#FFFFFF"
        android:textSize="35sp" />

    <TextView
        android:id="@+id/textAnswer2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textAnswer1"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="5dp"
        android:paddingLeft="30dp"
        android:paddingRight="30dp"
        android:background="@drawable/border"
        android:onClick="onClick"
        android:text="@string/editAnswer2"
        android:textColor="#FFFFFF"
        android:textSize="35sp" />

    <TextView
        android:id="@+id/textAnswer4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textAnswer3"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="5dp"
        android:paddingLeft="30dp"
        android:paddingRight="30dp"
        android:background="@drawable/border"
        android:onClick="onClick"
        android:text="@string/editAnswer4"
        android:textColor="#FFFFFF"
        android:textSize="35sp" />

</RelativeLayout>